<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.umkm.ilhamcollection.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.umkm.ilhamcollection.ui.cart.CartFragment"
        android:label="@string/cart_fragment"
        tools:layout="@layout/fragment_cart"/>

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.umkm.ilhamcollection.ui.transactions.TransactionsFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.umkm.ilhamcollection.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>